# tadween-whisperx

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  NOTICE  README.md  README.production.md  TODO.md  noxfile.py  pyproject.toml
scripts/: download_model.py
src/tadween_whisperx/: __init__.py  __main__.py  _logging.py  builder.py  config.py  main.py  runner.py  schema.py  ui.py  utils.py
src/tadween_whisperx/cli/: README.md  __init__.py  shared.py
src/tadween_whisperx/cli/config/: __init__.py  alignment.py  diarization.py  input.py  loader.py  normalizer.py  repo.py  transcription.py
src/tadween_whisperx/cli/run/: __init__.py  run.py
src/tadween_whisperx/cli/scan/: __init__.py
src/tadween_whisperx/components/: README.md  artifact.py  component.py  throttle.py  utils.py
src/tadween_whisperx/components/alignment/: handler.py  policy.py  schema.py
src/tadween_whisperx/components/diarization/: handler.py  policy.py  schema.py
src/tadween_whisperx/components/loader/: handler.py  policy.py  schema.py
src/tadween_whisperx/components/normalizer/: handler.py  policy.py  schema.py
src/tadween_whisperx/components/transcription/: handler.py  policy.py  schema.py
src/tadween_whisperx/resources/: config.yaml
src/tadween_whisperx/scanners/: README.md  __init__.py  base.py  http.py  local.py  s3.py
tests/: config.py  conftest.py  test_config.py  test_scanner.py
tests/E2E/: test_e2e.py
tests/cli/: conftest.py  test_config.py  test_config_components.py  test_config_input.py
tests/cli/run/: test_run.py
